--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 # Public URL, used for OG Image when running nuxt generate
 NUXT_PUBLIC_SITE_URL=
+
+# MongoDB
+MONGODB_URI=
+# Backward compatible alias (optional):
+# MONGOURI=
+MONGODB_DB=ExpensesData
+MONGODB_CUSTOMERS_COLLECTION=UserData
