--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ MONGODB_URI=
 # MONGOURI=
 MONGODB_DB=ExpensesData
 MONGODB_CUSTOMERS_COLLECTION=UserData
+MONGODB_USERS_COLLECTION=users
+MONGODB_ACCOUNTS_COLLECTION=accounts
+MONGODB_CATEGORIES_COLLECTION=categories
+MONGODB_TRANSACTIONS_COLLECTION=transactions
+MONGODB_BUDGETS_COLLECTION=budgets
+MONGODB_BUDGET_USAGES_COLLECTION=budget_usages
+MONGODB_DEFAULT_USER_ID=demo-user
