--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "db:indexes": "node scripts/create-indexes.mjs",
+    "db:seed-home": "node scripts/seed-home-demo.mjs"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.87",
@@ -21,6 +23,7 @@
     "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
     "date-fns": "^4.1.0",
+    "mongodb": "^6.16.0",
     "nuxt": "^4.3.0",
     "scule": "^1.3.0",
     "tailwindcss": "^4.1.18",
