--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ MONGODB_TRANSACTIONS_COLLECTION=transactions
 MONGODB_BUDGETS_COLLECTION=budgets
 MONGODB_BUDGET_USAGES_COLLECTION=budget_usages
 MONGODB_DEFAULT_USER_ID=demo-user
+
+# Optional connection tuning (useful for some serverless networks)
+# MONGODB_IP_FAMILY=4
+# MONGODB_SERVER_SELECTION_TIMEOUT_MS=10000
