--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "packageManager": "pnpm@10.28.1"
 }
