--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ MONGODB_CATEGORIES_COLLECTION=categories
 MONGODB_TRANSACTIONS_COLLECTION=transactions
 MONGODB_BUDGETS_COLLECTION=budgets
 MONGODB_BUDGET_USAGES_COLLECTION=budget_usages
+MONGODB_NOTIFICATIONS_COLLECTION=notifications
 MONGODB_DEFAULT_USER_ID=demo-user
 
 # Optional connection tuning (useful for some serverless networks)
